Customizing member views.

--- a/src/ChurchSystem.App/Views/Member/Create.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h4>Create new member</h4>
 
-<h4>MemberViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -73,14 +72,17 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-secondary" asp-action="Index">
+                    <i class="fa fa-arrow-left"></i>
+                    Back
+                </a>
+                <button type="submit" class="btn btn-primary">
+                    <i class="fa fa-check"></i>
+                    Create
+                </button>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
