--- a/src/ChurchSystem.App/Views/Member/Delete.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h4>Delete member</h4>
 
-<h3>Are you sure you want to delete this?</h3>
+<h5 class="text-danger">Are you sure you want to delete this?</h5>
 <div>
-    <h4>MemberViewModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -87,7 +86,13 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-secondary" asp-action="Index">
+            <i class="fa fa-arrow-left"></i>
+            Back
+        </a>
+        <button type="submit" class="btn btn-danger">
+            <i class="fa fa-trash"></i>
+            Delete
+        </button>
     </form>
 </div>
