--- a/src/ChurchSystem.App/Views/Member/Details.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h4>Member details</h4>
 
 <div>
-    <h4>MemberViewModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -85,6 +84,12 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-secondary" asp-action="Index">
+        <i class="fa fa-arrow-left"></i>
+        Back
+    </a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">
+        <i class="fa fa-pencil"></i>
+        Edit
+    </a>
 </div>
