--- a/src/ChurchSystem.App/Views/Shared/_Layout.cshtml
+++ b/src/ChurchSystem.App/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="Index">Members</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DOnation" asp-action="Index">Donations</a>
+                        </li>
                     </ul>
                 </div>
             </div>
