--- a/src/ChurchSystem.App/Views/Shared/_Layout.cshtml
+++ b/src/ChurchSystem.App/Views/Shared/_Layout.cshtml
@@ -30,7 +30,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="Index">Members</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="DOnation" asp-action="Index">Donations</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Donation" asp-action="Index">Donations</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
                         </li>
                     </ul>
                 </div>
