Group controller scaffolding.

--- a/src/ChurchSystem.App/Views/Shared/_Layout.cshtml
+++ b/src/ChurchSystem.App/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Group" asp-action="Index">Groups</a>
+                        </li>
                     </ul>
                 </div>
             </div>
