--- a/src/ChurchSystem.App/Views/Member/Create.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Create.cshtml
@@ -86,15 +86,11 @@
             <div class="row">
                 <div class="form-group col-6">
                     <label asp-for="GroupId" class="control-label"></label>
-                    <select asp-for="GroupId" class="form-control" asp-items="@(new SelectList(Model.Groups, "Id", "Description"))">
-                        <option selected disabled value="">Select</option>
-                    </select>
+                    <select asp-for="GroupsIds" class="form-control selectpicker border" data-live-search="true" title="Select" multiple asp-items="@(new SelectList(Model.Groups, "Id", "Description"))"></select>
                 </div>
                 <div class="form-group col-6">
                     <label asp-for="RoleId" class="control-label"></label>
-                    <select asp-for="RoleId" class="form-control" asp-items="@(new SelectList(Model.Roles, "Id", "Description"))">
-                        <option selected disabled value="">Select</option>
-                    </select>
+                    <select asp-for="RolesIds" class="form-control selectpicker border" data-live-search="true" title="Select" multiple asp-items="@(new SelectList(Model.Roles, "Id", "Description"))"></select>
                 </div>
             </div>
             <div class="form-group">
