--- a/src/ChurchSystem.App/Views/Member/Details.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Details.cshtml
@@ -8,88 +8,15 @@
 
 <div>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Document)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Document)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateBirth)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateBirth)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Neighborhood)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Neighborhood)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.City)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.City)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.State)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.State)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Mailbox)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Mailbox)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Baptized)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Baptized)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a class="btn btn-secondary" asp-action="Index">
-        <i class="fa fa-arrow-left"></i>
-        Back
-    </a>
-    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">
-        <i class="fa fa-pencil"></i>
-        Edit
-    </a>
+    @{ await Html.RenderPartialAsync("_MemberDetailsPartial.cshtml"); }
+    <div>
+        <a class="btn btn-secondary" asp-action="Index">
+            <i class="fa fa-arrow-left"></i>
+            Back
+        </a>
+        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">
+            <i class="fa fa-pencil"></i>
+            Edit
+        </a>
+    </div>
 </div>
