--- a/src/ChurchSystem.App/Views/Donation/Create.cshtml
+++ b/src/ChurchSystem.App/Views/Donation/Create.cshtml
@@ -9,14 +9,14 @@
 <hr />
 <div class="">
     <div class="">
-        <form asp-action="Create">
+        <form asp-action="Create" class="ui form">
             @{ await Html.RenderPartialAsync("_DonationFormPartial.cshtml"); }
             <div class="form-group">
-                <a class="btn btn-secondary" asp-action="Index">
+                <a class="ui button" asp-action="Index">
                     <i class="fa fa-arrow-left"></i>
                     Back
                 </a>
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="ui primary button">
                     <i class="fa fa-check"></i>
                     Create
                 </button>
