--- a/src/ChurchSystem.App/Views/Member/Create.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Create.cshtml
@@ -1,29 +1,29 @@
 ﻿@model ChurchSystem.App.ViewsModels.MemberViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create new member";
 }
 
-<h4>Create new member</h4>
+<h3 class="ui header">
+    <i class="user outline icon"></i>
+    Create new member
+</h3>
 
-<hr />
-<div class="row">
-    <div class="col-12">
-        <form asp-action="Create">
-            @{ await Html.RenderPartialAsync("_MemberFormPartial.cshtml"); }
-            <div class="form-group">
-                <a class="btn btn-secondary" asp-action="Index">
-                    <i class="fa fa-arrow-left"></i>
-                    Back
-                </a>
-                <button type="submit" class="btn btn-primary">
-                    <i class="fa fa-check"></i>
-                    Create
-                </button>
-            </div>
-        </form>
+<div class="ui divider"></div>
+<partial name="/Views/Components/_ValidationSummary.cshtml" />
+<form asp-action="Create" class="ui form segment">
+    @{ await Html.RenderPartialAsync("_MemberFormPartial.cshtml"); }
+    <div class="form-group">
+        <a class="ui button" asp-action="Index">
+            <i class="arrow left icon"></i>
+            Back
+        </a>
+        <button type="submit" class="ui submit primary button">
+            <i class="check icon"></i>
+            Create
+        </button>
     </div>
-</div>
+</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
