--- a/src/ChurchSystem.App/Views/Member/_MemberDetailsPartial.cshtml
+++ b/src/ChurchSystem.App/Views/Member/_MemberDetailsPartial.cshtml
@@ -1,76 +1,102 @@
 ﻿@model ChurchSystem.App.ViewsModels.MemberViewModel
 
-<dl class="row">
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Name)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Name)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Document)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Document)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.DateBirth)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.DateBirth)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Address)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Address)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Neighborhood)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Neighborhood)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.City)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.City)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.State)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.State)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Mailbox)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Mailbox)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Email)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Email)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.PhoneNumber)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.PhoneNumber)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Baptized)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Baptized)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Status)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Status)
-    </dd>
-</dl>
+<div class="ui segment">
+    <div class="ui relaxed divided list">
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.Name)
+                </div>
+                @Html.DisplayFor(model => model.Name)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.Document)
+                </div>
+                @Html.DisplayFor(model => model.Document)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.DateBirth)
+                </div>
+                @Html.DisplayFor(model => model.DateBirth)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.Address)
+                </div>
+                @Html.DisplayFor(model => model.Address)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.Neighborhood)
+                </div>
+                @Html.DisplayFor(model => model.Neighborhood)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.City)
+                </div>
+                @Html.DisplayFor(model => model.City)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.State)
+                </div>
+                @Html.DisplayFor(model => model.State)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.Mailbox)
+                </div>
+                @Html.DisplayFor(model => model.Mailbox)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.Email)
+                </div>
+                @Html.DisplayFor(model => model.Email)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.PhoneNumber)
+                </div>
+                @Html.DisplayFor(model => model.PhoneNumber)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.Baptized)
+                </div>
+                @Html.DisplayFor(model => model.Baptized)
+            </div>
+        </div>
+        <div class="item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.Status)
+                </div>
+                @Html.DisplayFor(model => model.Status)
+            </div>
+        </div>
+    </div>
+</div>
