--- a/src/ChurchSystem.App/Views/Member/Details.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Details.cshtml
@@ -1,22 +1,22 @@
 ﻿@model ChurchSystem.App.ViewsModels.MemberViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Member details";
 }
 
-<h4>Member details</h4>
+<h3 class="ui header">
+    <i class="user outline icon"></i>
+    Member details
+</h3>
 
-<div>
-    <hr />
-    @{ await Html.RenderPartialAsync("_MemberDetailsPartial.cshtml"); }
-    <div>
-        <a class="btn btn-secondary" asp-action="Index">
-            <i class="fa fa-arrow-left"></i>
-            Back
-        </a>
-        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">
-            <i class="fa fa-pencil"></i>
-            Edit
-        </a>
-    </div>
-</div>
+<div class="ui divider"></div>
+
+@{ await Html.RenderPartialAsync("_MemberDetailsPartial.cshtml"); }
+<a class="ui button" asp-action="Index">
+    <i class="arrow left icon"></i>
+    Back
+</a>
+<a class="ui primary button" asp-action="Edit" asp-route-id="@Model.Id">
+    <i class="pencil alternate icon"></i>
+    Edit
+</a>
