--- a/src/ChurchSystem.App/Views/Role/Delete.cshtml
+++ b/src/ChurchSystem.App/Views/Role/Delete.cshtml
@@ -1,27 +1,44 @@
 ﻿@model ChurchSystem.App.ViewsModels.RoleViewModel
 
+<style>
+    [data-position="right center"][data-tooltip]:after{
+        color: red;
+        font-weight: bold;
+    }
+</style>
+
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete role";
 }
 
-<h1>Delete</h1>
+<h3 class="ui header">
+    <i class="wpforms icon"></i>
+    Delete role
+</h3>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>RoleViewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="ui divider"></div>
+
+<div class="ui segment">
+    <div class="ui relaxed divided list">
+        <div class = "item">
+            <div class="content">
+                <div class="header">
+                    @Html.DisplayNameFor(model => model.Description)
+                </div>
+                @Html.DisplayFor(model => model.Description)
+            </div>
+        </div>
+    </div>
 </div>
+
+<form asp-action="Delete">
+    <input type="hidden" asp-for="Id" />
+    <a class="ui button" asp-action="Index">
+        <i class="arrow left icon"></i>
+        Back
+    </a>
+    <button type="submit" class="ui red button" data-tooltip="Are you sure you want to delete this?" data-position="right center">
+        <i class="trash alternate outline icon"></i>
+        Delete
+    </button>
+</form>
